sconstruct: -Added conditional to construct env based on OS because FreeBSD uses a different library prefix than what  Linux distributions use.  This may be expanded upon later for other OS builds.
src/sconscript:
-Added conditional to construct include_prefix string based on OS because FreeBSD uses a different include prefix than what
 Linux distributions use.  The include_prefix will be used when constructing the include_path.
-Appended 'boost_system' and 'boost_thread' to libarr[]; otherwise, linking was failing.  Verified this addition was needed
 on Linux Mint, too, so I bet the same can be said for Ubuntu and possibly any Debian-based OS; therefore, no OS-based
 conditional was implemented.

--- a/distro/sconstruct
+++ b/distro/sconstruct
@@ -19,8 +19,12 @@ AddOption(
 )
 
 # Build the environment and export it for child sconscripts
-env = Environment(PREFIX = GetOption('prefix'), CXX='clang++', CPPFLAGS='-g -std=c++11')
-#env = Environment(PREFIX = GetOption('prefix'), CXX='g++', CPPFLAGS='-g')
+if os.uname()[0] == 'FreeBSD':
+   env = Environment(PREFIX = GetOption('prefix'), CXX='clang++', LIBPATH='/usr/local/lib/', \
+                     LD_LIBRARY_PATH='/usr/local/lib/', CPPFLAGS='-std=c++11')
+else:
+   env = Environment(PREFIX = GetOption('prefix'), CXX='clang++', CPPFLAGS='-g -std=c++11')
+
 Export('env')
 
 # Child conscripts
