--- a/distro/src/sconscript
+++ b/distro/src/sconscript
@@ -1,9 +1,17 @@
+import os
+
 # Search these directories for libraries to include.
 # '#' indicates the directory that scons is executed in.
 # TODO: pkg-config for boost?
 
 # Import the environment from parent class
 Import('env')
+
+# Set include_prefix depending on OS
+if os.uname()[0] == 'FreeBSD':
+   include_prefix = '/usr/local'
+else:
+   include_prefix = '/usr'
 
 include_path =                     \
     '#/src/common:'                \
@@ -14,8 +22,9 @@ include_path =                     \
    +'#/src/main:'                  \
    +'#/src/map:'                   \
    +'#/src/model:'                 \
-   +'/usr/include/SDL:'            \
-   +'/usr/include/python2.7:'
+   +include_prefix+'/include/SDL:'            \
+   +include_prefix+'/include/python2.7:'      \
+   +include_prefix+'/include'
 
 # List of Objects to Compile
 objects = [
@@ -69,22 +78,8 @@ if ARGUMENTS.get('VERBOSE') != "1":
 	env['CXXCOMSTR'] = "[CC] $TARGET"
 	env['LINKCOMSTR'] = "[LK] $TARGET"
 
-
 # Construct list of Library to Link Against
-libarr=['sqlite3','SDL','SDL_image','SDL_ttf','glog']
-#libarr=['sqlite3','SDL','SDL_image','SDL_ttf','python2.7','glog']
+libarr=['sqlite3','SDL','SDL_image','SDL_ttf','glog','boost_thread','boost_system']
 
-# Attempt to find boost_thread
-# TODO: It'd be great to drop boost dependency here by using C++11's threads
-# instead. 
-conf = Configure(env)
-if (conf.CheckLib("boost_thread")):
-   libarr.append("boost_thread")
-elif (conf.CheckLib("boost_thread-mt")):
-   libarr.append("boost_thread-mt")
-else:
-   print "Failed to find a Boost Thread library."
-   Exit(1)
-
-asgard = env.Program('../asgard', objects, CPPPATH=include_path, LIBS=libarr, CXXFLAGS=['-Wall', '-O0', '-g'])
+asgard = env.Program('../asgard', objects, CPPPATH=include_path, LIBS=libarr, CXXFLAGS=['-Wall', '-O2'])
 Export("asgard")
